[package]
name = "ohio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ohio"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["macros", "chrono"] }
rdkafka = { version = "0.29.0", features = [ "cmake-build", "ssl" ] }

[target.'cfg(target_os = "windows")'.dependencies]
sasl2-sys = {version="0.1.20",features=["vendored","openssl-vendored"]}

[build-dependencies]
openssl-src = { version = "111", default-features = false, features = ["force-engine"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
