[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "ohio"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

