[build-system]
requires = ["maturin>=0.13,<=0.15.1"]
build-backend = "maturin"

[project]
name = "ohio"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "pysrc"

